force-app/main/default/objects/LLC_BI__Product_Catalog_Section_Configuration__c/LLC_BI__Product_Catalog_Section_Configuration__c.object-meta.xml
<CustomObject>
    <description>Provides a template for a section configuration used within a Product Catalog Route template.</description>
    <label>Product Catalog Section Configuration</label>
    <nameField>
        <label>Section Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalog Section Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>