force-app/main/default/objects/LLC_BI__Product_Catalog_Section_Configuration__c/fields/LLC_BI__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Order__c</fullName>
    <description>A sorting key of this section configuration compared to others in its same screen section.</description>
    <inlineHelpText>What is the sorting order key for this screen section configuration?</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>