force-app/main/default/objects/LLC_BI__Product_Catalog_Section_Configuration__c/fields/LLC_BI__Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Field_Set__c</fullName>
    <description>Stores which field set is used for a given section configuration</description>
    <inlineHelpText>Which field set is associated with this section configuration?</inlineHelpText>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>