force-app/main/default/objects/LLC_BI__Product_Catalog_Section_Configuration__c/fields/LLC_BI__Layout__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Layout__c</fullName>
    <description>Defines the layout to be used for a section configuration.</description>
    <inlineHelpText>What layout will be used for this section configuration template?</inlineHelpText>
    <label>Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>