force-app/main/default/objects/LLC_BI__Product_Catalog_Section_Configuration__c/fields/LLC_BI__Product_Catalog_Route_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Catalog_Route_Template__c</fullName>
    <description>Maps this section configuration template to its parent route template record.</description>
    <inlineHelpText>Which product catalog route template is this section configuration template associated with?</inlineHelpText>
    <label>Product Catalog Route Template</label>
    <referenceTo>LLC_BI__Product_Catalog_Route_Template__c</referenceTo>
    <relationshipLabel>Product Catalog Section Configurations</relationshipLabel>
    <relationshipName>Product_Catalog_Section_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>