force-app/main/default/objects/LLC_BI__Product_Catalog_Section_Configuration__c/fields/LLC_BI__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SObject_Type__c</fullName>
    <description>Stores the name of the sObject associated with this section configuration.</description>
    <inlineHelpText>What sObject type is tied to this section configuration?</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>